get_match with MS dataset

--- a/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph.ipynb
+++ b/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph.ipynb
@@ -716,6 +716,7 @@
     "P = hungarian(D)\n",
     "print(P.shape)\n",
     "# online_offline: 215m\n",
+    "# acm_dblp: 1112m\n",
     "P"
    ]
   },
@@ -747,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
