--- a/Network-Alignment-with-Transferable-Graph-Autoencoders/test_graph.ipynb
+++ b/Network-Alignment-with-Transferable-Graph-Autoencoders/test_graph.ipynb
@@ -1294,6 +1294,35 @@
     "    ax2.add_artist(con)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from munkres import Munkres, print_matrix\n",
+    "\n",
+    "matrix = [[5, 9, 1],\n",
+    "          [10, 3, 2],\n",
+    "          [8, 7, 4]]\n",
+    "m = Munkres()\n",
+    "indexes = m.compute(matrix)\n",
+    "print_matrix(matrix, msg='Lowest cost through this matrix:')\n",
+    "total = 0\n",
+    "for row, column in indexes:\n",
+    "    value = matrix[row][column]\n",
+    "    total += value\n",
+    "    print(f'({row}, {column}) -> {value}')\n",
+    "print(\"total cost: {}\".format(total))"
+   ]
   }
  ],
  "metadata": {
