--- a/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph_MS.ipynb
+++ b/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph_MS.ipynb
@@ -365,7 +365,7 @@
     "    HIDDEN_DIM = 1024\n",
     "    output_feature_size = 1024\n",
     "    lr = 0.0001\n",
-    "    epoch = 100\n"
+    "    epoch = 100"
    ]
   },
   {
