--- a/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph.ipynb
+++ b/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,6 +435,39 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "{'ACM': [tensor([[0., 1., 1.,  ..., 0., 0., 0.],\n",
+       "          [1., 0., 1.,  ..., 0., 0., 0.],\n",
+       "          [1., 1., 0.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.]])],\n",
+       " 'DBLP': [tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.]])]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -445,7 +478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [05:31<00:00,  3.32s/it]"
+      "100%|██████████| 100/100 [05:25<00:00,  3.26s/it]"
      ]
     },
     {
@@ -453,10 +486,10 @@
      "output_type": "stream",
      "text": [
       "The best results achieved:\n",
-      "Hit@1: 0.7383399209486166\n",
-      "Hit@5: 0.9138339920948617\n",
-      "Hit@10: 0.9521739130434783\n",
-      "Hit@50: 0.9822134387351779\n"
+      "Hit@1: 0.7367588932806324\n",
+      "Hit@5: 0.9140316205533597\n",
+      "Hit@10: 0.9511857707509881\n",
+      "Hit@50: 0.9814229249011858\n"
      ]
     },
     {
@@ -639,13 +672,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[18.1271, 19.0946, 17.8602,  ..., 18.3082, 17.9716, 17.8544],\n",
-       "        [16.5993, 15.8210, 16.1661,  ..., 16.7209, 16.4299, 16.3300],\n",
-       "        [21.9298, 22.5469, 21.7835,  ..., 22.0644, 21.7151, 21.6991],\n",
+       "tensor([[18.1416, 19.1218, 17.8377,  ..., 18.3232, 18.0194, 17.8191],\n",
+       "        [16.2521, 15.4908, 15.8528,  ..., 16.4086, 16.1201, 15.9282],\n",
+       "        [21.2098, 21.8529, 20.9663,  ..., 21.3654, 20.9915, 20.8664],\n",
        "        ...,\n",
-       "        [ 2.4003,  4.3302,  1.2216,  ...,  3.5853,  2.3422,  1.9020],\n",
-       "        [ 2.1316,  4.5062,  2.0092,  ...,  3.5371,  1.9993,  0.4494],\n",
-       "        [ 1.7877,  4.5111,  1.8704,  ...,  3.4527,  1.4913,  1.3583]],\n",
+       "        [ 2.3890,  4.5315,  1.3241,  ...,  3.6745,  2.3560,  1.8829],\n",
+       "        [ 2.0933,  4.6594,  1.9884,  ...,  3.5906,  1.9376,  0.4439],\n",
+       "        [ 1.9008,  4.7192,  1.8870,  ...,  3.5870,  1.6204,  1.3088]],\n",
        "       device='cuda:0')"
       ]
      },
@@ -668,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +750,7 @@
        "       [7275, 9915]], dtype=int32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,6 +764,43 @@
     "truth = test_pairs_[test_pairs_[:, 1].argsort()]\n",
     "print(truth.shape)\n",
     "truth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5060, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[18.1416, 19.1218, 17.8377,  ..., 18.3232, 18.0194, 17.8191],\n",
+       "        [16.2521, 15.4908, 15.8528,  ..., 16.4086, 16.1201, 15.9282],\n",
+       "        [21.2098, 21.8529, 20.9663,  ..., 21.3654, 20.9915, 20.8664],\n",
+       "        ...,\n",
+       "        [ 2.3890,  4.5315,  1.3241,  ...,  3.6745,  2.3560,  1.8829],\n",
+       "        [ 2.0933,  4.6594,  1.9884,  ...,  3.5906,  1.9376,  0.4439],\n",
+       "        [ 1.9008,  4.7192,  1.8870,  ...,  3.5870,  1.6204,  1.3088]],\n",
+       "       device='cuda:0')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truth_ = test_pairs_[test_pairs_[:, 0].argsort()]\n",
+    "print(truth_.shape)\n",
+    "truth\n",
+    "_"
    ]
   },
   {
@@ -830,9 +900,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'D' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m \tassignments \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(row_ind, col_ind))\n\u001b[1;32m     14\u001b[0m \t\u001b[38;5;28;01mreturn\u001b[39;00m total_cost, assignments\n\u001b[0;32m---> 16\u001b[0m total_cost, assignments \u001b[38;5;241m=\u001b[39m hungarian_algorithm(\u001b[43mD\u001b[49m\u001b[38;5;241m.\u001b[39mcpu())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'D' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import linear_sum_assignment\n",
@@ -3292,33 +3374,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[18.1271, 19.0946, 17.8602,  ..., 18.3082, 17.9716, 17.8544],\n",
-       "        [16.5993, 15.8210, 16.1661,  ..., 16.7209, 16.4299, 16.3300],\n",
-       "        [21.9298, 22.5469, 21.7835,  ..., 22.0644, 21.7151, 21.6991],\n",
-       "        ...,\n",
-       "        [ 2.4003,  4.3302,  1.2216,  ...,  3.5853,  2.3422,  1.9020],\n",
-       "        [ 2.1316,  4.5062,  2.0092,  ...,  3.5371,  1.9993,  0.4494],\n",
-       "        [ 1.7877,  4.5111,  1.8704,  ...,  3.4527,  1.4913,  1.3583]],\n",
-       "       device='cuda:0')"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -3362,7 +3417,31 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([9916, 9916])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 0.]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = get_match(torch.tensor(D_), device)\n",
     "print(X.shape)\n",
@@ -3371,9 +3450,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9916, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[6829,    0],\n",
+       "       [ 601,    1],\n",
+       "       [3102,    2],\n",
+       "       ...,\n",
+       "       [9013, 9913],\n",
+       "       [9208, 9914],\n",
+       "       [9211, 9915]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "option5 = matrix_to_edge(X)\n",
     "option5"
@@ -3381,9 +3484,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "matching = test_matching(truth, option5)\n",
     "print(len(matching))\n",
@@ -3443,7 +3565,7 @@
     "\t\t\t  [4, 5, 6],\n",
     "\t\t\t  [7, 0, 5]])\n",
     "\n",
-    "a[a[:, 2].argsort()]\n"
+    "a[a[:, 2].argsort()]"
    ]
   }
  ],
