--- a/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph.ipynb
+++ b/Network-Alignment-with-Transferable-Graph-Autoencoders/test_subgraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "' temp = torch.from_numpy(b[\"x1\"]).float() # G1, features\\nprint(temp.shape)\\ntemp '"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "' temp = torch.from_numpy(b[\"x2\"]).float() # G2, features\\nprint(temp.shape)\\ntemp '"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "' temp = b[\"test_pairs\"]\\nprint(temp.shape)\\ntemp '"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "       [9868, 9011]], dtype=int32)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "['ACM', 'DBLP']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "          [0., 0., 0.,  ..., 0., 0., 0.]])]}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "dict_keys(['ACM', 'DBLP'])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "' temp = train_loader[\"ACM\"][0]\\nprint(temp.shape)\\ntemp '"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "' temp = train_loader[\"DBLP\"][0]\\nprint(temp.shape)\\ntemp '"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        ")"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "          [0., 0., 0.,  ..., 0., 0., 0.]])]}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [05:24<00:00,  3.25s/it]"
+      "100%|██████████| 100/100 [06:03<00:00,  3.64s/it]"
      ]
     },
     {
@@ -398,10 +398,10 @@
      "output_type": "stream",
      "text": [
       "The best results achieved:\n",
-      "Hit@1: 0.7373517786561264\n",
-      "Hit@5: 0.9144268774703558\n",
-      "Hit@10: 0.9509881422924901\n",
-      "Hit@50: 0.9822134387351779\n"
+      "Hit@1: 0.7375494071146245\n",
+      "Hit@5: 0.9156126482213439\n",
+      "Hit@10: 0.9515810276679841\n",
+      "Hit@50: 0.9812252964426877\n"
      ]
     },
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -587,17 +587,17 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[17.0803, 18.0060, 16.8641,  ..., 17.3085, 17.0064, 16.8174],\n",
-       "        [16.0677, 15.1235, 15.7363,  ..., 16.2563, 15.9478, 15.8815],\n",
-       "        [20.4969, 21.0508, 20.3272,  ..., 20.6061, 20.2731, 20.2004],\n",
+       "tensor([[16.3169, 17.4480, 16.1457,  ..., 16.5552, 16.2303, 16.0921],\n",
+       "        [14.4225, 13.4198, 14.0695,  ..., 14.6293, 14.2589, 14.1650],\n",
+       "        [19.9264, 20.7160, 19.8225,  ..., 20.1586, 19.7831, 19.7759],\n",
        "        ...,\n",
-       "        [ 2.3192,  4.4942,  1.1998,  ...,  3.6446,  2.2681,  1.9548],\n",
-       "        [ 2.0271,  4.5523,  2.0445,  ...,  3.5712,  1.7629,  0.4061],\n",
-       "        [ 1.7559,  4.6194,  1.7529,  ...,  3.4970,  1.5098,  1.2980]],\n",
+       "        [ 2.3427,  4.3546,  1.2006,  ...,  3.6460,  2.3315,  1.9583],\n",
+       "        [ 1.9414,  4.5520,  1.9740,  ...,  3.5747,  1.8384,  0.4356],\n",
+       "        [ 1.7745,  4.6673,  1.8554,  ...,  3.5299,  1.4473,  1.2334]],\n",
        "       device='cuda:0')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "       [7275, 9915]], dtype=int32)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "       [9868, 9011]], dtype=int32)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2149,11 +2149,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([9872, 9916])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = get_match(torch.tensor(D_), device)\n",
+    "D.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# X = get_match(torch.tensor(D_), device)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[43mget_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mD\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(X\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m      4\u001b[0m X\n",
+      "File \u001b[0;32m~/Project/Graph_MatchingAlignment/Network-Alignment-with-Transferable-Graph-Autoencoders/algorithm.py:46\u001b[0m, in \u001b[0;36mget_match\u001b[0;34m(D, device)\u001b[0m\n\u001b[1;32m     44\u001b[0m r \u001b[38;5;241m=\u001b[39m argmin \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m cur_size\n\u001b[1;32m     45\u001b[0m c \u001b[38;5;241m=\u001b[39m argmin \u001b[38;5;241m%\u001b[39m cur_size\n\u001b[0;32m---> 46\u001b[0m P[\u001b[43mindex_S\u001b[49m\u001b[43m[\u001b[49m\u001b[43mr\u001b[49m\u001b[43m]\u001b[49m][index_S_hat[c]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     47\u001b[0m index_S\u001b[38;5;241m.\u001b[39mremove(index_S[r])\n\u001b[1;32m     48\u001b[0m index_S_hat\u001b[38;5;241m.\u001b[39mremove(index_S_hat[c])\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# X = get_match(torch.tensor(D_), device)\n",
+    "X = get_match(D, device)\n",
     "print(X.shape)\n",
     "X"
    ]
